<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="subtitle">Check your body mass index quickly</string>
    <string name="weight_hint">Weight in kg</string>
    <string name="height_hint">Height in cm</string>
    <string name="calculate">Calculate BMI</string>
    <string name="clear">Clear</string>
    <string name="default_result">Enter your details to calculate BMI.</string>
    <string name="developer_info">Developed by Jakariya Talukdar</string>
</resources>
